// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataTable > Snapshots > matches checked state snapshot 1`] = `
<div
  aria-disabled="false"
  class="datatable w-full relative datatable--default border border-border datatable--size-default text-sm"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
>
  <div
    class="datatable__scroll-container overflow-auto"
  >
    <table
      class="w-full caption-bottom text-sm"
      role="table"
    >
      <thead
        class="[&_tr]:border-b"
      >
        <tr />
      </thead>
      <tbody
        class="[&_tr:last-child]:border-0"
      >
        <tr>
          <td
            class="p-8 text-center text-muted-foreground"
            colspan="0"
            role="status"
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  Test content
</div>
`;

exports[`DataTable > Snapshots > matches default snapshot 1`] = `
<div
  aria-disabled="false"
  class="datatable w-full relative datatable--default border border-border datatable--size-default text-sm"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
>
  <div
    class="datatable__scroll-container overflow-auto"
  >
    <table
      class="w-full caption-bottom text-sm"
      role="table"
    >
      <thead
        class="[&_tr]:border-b"
      >
        <tr />
      </thead>
      <tbody
        class="[&_tr:last-child]:border-0"
      >
        <tr>
          <td
            class="p-8 text-center text-muted-foreground"
            colspan="0"
            role="status"
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  Test content
</div>
`;

exports[`DataTable > Snapshots > matches disabled state snapshot 1`] = `
<div
  aria-disabled="true"
  class="datatable w-full relative datatable--default border border-border datatable--size-default text-sm disabled:opacity-50 disabled:pointer-events-none"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
>
  <div
    class="datatable__scroll-container overflow-auto"
  >
    <table
      class="w-full caption-bottom text-sm"
      role="table"
    >
      <thead
        class="[&_tr]:border-b"
      >
        <tr />
      </thead>
      <tbody
        class="[&_tr:last-child]:border-0"
      >
        <tr>
          <td
            class="p-8 text-center text-muted-foreground"
            colspan="0"
            role="status"
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  Test content
</div>
`;

exports[`DataTable > Snapshots > matches error state snapshot 1`] = `
<div
  class="datatable w-full relative datatable--default border border-border datatable--size-default text-sm state-error"
>
  <div
    class="p-4 text-center"
  >
    <div
      class="text-destructive font-medium mb-2"
    >
      Error
    </div>
    <div
      class="error-message text-sm text-muted-foreground"
    />
  </div>
</div>
`;

exports[`DataTable > Snapshots > matches hover state snapshot 1`] = `
<div
  aria-disabled="false"
  class="datatable w-full relative datatable--default border border-border datatable--size-default text-sm"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
>
  <div
    class="datatable__scroll-container overflow-auto"
  >
    <table
      class="w-full caption-bottom text-sm"
      role="table"
    >
      <thead
        class="[&_tr]:border-b"
      >
        <tr />
      </thead>
      <tbody
        class="[&_tr:last-child]:border-0"
      >
        <tr>
          <td
            class="p-8 text-center text-muted-foreground"
            colspan="0"
            role="status"
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  Test content
</div>
`;

exports[`DataTable > Snapshots > matches loading state snapshot 1`] = `
<div
  class="datatable state-loading flex items-center justify-center p-8 min-h-[200px]"
>
  <div
    class="flex items-center space-x-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle h-6 w-6 animate-spin spinner"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
    <span
      class="text-muted-foreground"
    >
      Loading table data...
    </span>
    <span
      class="sr-only"
      role="status"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`DataTable > Snapshots > matches required state snapshot 1`] = `
<div
  aria-disabled="false"
  class="datatable w-full relative datatable--default border border-border datatable--size-default text-sm"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
  required=""
>
  <div
    class="datatable__scroll-container overflow-auto"
  >
    <table
      class="w-full caption-bottom text-sm"
      role="table"
    >
      <thead
        class="[&_tr]:border-b"
      >
        <tr />
      </thead>
      <tbody
        class="[&_tr:last-child]:border-0"
      >
        <tr>
          <td
            class="p-8 text-center text-muted-foreground"
            colspan="0"
            role="status"
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  Test content
</div>
`;

exports[`DataTable > Snapshots > matches selected state snapshot 1`] = `
<div
  aria-disabled="false"
  class="datatable w-full relative datatable--default border border-border datatable--size-default text-sm"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
>
  <div
    class="datatable__scroll-container overflow-auto"
  >
    <table
      class="w-full caption-bottom text-sm"
      role="table"
    >
      <thead
        class="[&_tr]:border-b"
      >
        <tr />
      </thead>
      <tbody
        class="[&_tr:last-child]:border-0"
      >
        <tr>
          <td
            class="p-8 text-center text-muted-foreground"
            colspan="0"
            role="status"
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  Test content
</div>
`;
